updateTicket
