# server/routes/ticketsRoutes.js
@@ -4,6 +4,7 @@ const ticketsController = require("../controllers/ticketsController");
 
 app.get("/getAllTickets", ticketsController.getAllTickets);
 app.post("/registerTicket", ticketsController.registerTicket);
+app.post("/updateTicket", ticketsController.updateTicket);
 
 
 module.exports = app;
